# limadou_tracking_system

./: CMakeLists.txt  README.md  raggio.C  raggio_C.d  raggio_C_ACLiC_dict_rdict.pcm  run.C  run_C.d  run_C_ACLiC_dict.cxx_tmp_1073  run_C_ACLiC_dict_rdict.pcm  todo.txt  usefull_func.txt
data/: angle_reco.root  angle_reco_original.root  datiMC.txt  geom  geomHist.root  limadou_sim32L.csv  limadou_sim32L_chi2.csv  limadou_sim_oldalgo.csv  limadou_sim_oldalgo3.csv  overlay_plots.root  overlay_plots04.root  overlay_plots2.root  overlay_plots6.root  overlay_plotsHEPD.root  overlay_plotsMUONS.root  overlay_plotsPEAKS.root  reco_HEPD02.root  reco_HEPDaaaa02.root  reco_muons.root  simulations_angle_reco.root  statsHist.root  statsHist100000tracks.root  statsHist10000tracks.root  statsHist_sample_10000tracks.root  statsHisttracks.root  stats_new_algo.root  stats_new_algo_real.root
data_beam_test/: HEPD02-QM_m-Exp-20241105-110534-Events-00375_03487-p01_L1.root  data.root
include/: LTrackerCluster.h  LTrackerTrack.h  chip.h  display.h  eventdata.h  simulations.h  stats.h
src/: LTrackerCluster.cpp  LTrackerTrack.cpp  chip.cpp  display.cpp  display.cxx  eventdata.cpp  main.cpp  simulations.cpp  stats.cpp
